# serializer version: 1
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event-combinedentity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 6.297  ┆ 6.4283 ┆ … ┆ 6.2093 ┆ 5.369  ┆ 5.1897 ┆ 5.5951 │
  │ 2   ┆ 6.297  ┆ 0.0    ┆ 5.2759 ┆ … ┆ 5.2261 ┆ 4.8119 ┆ 3.8339 ┆ 3.631  │
  │ 3   ┆ 6.4283 ┆ 5.2759 ┆ 0.0    ┆ … ┆ 3.5937 ┆ 3.3794 ┆ 4.9679 ┆ 6.1982 │
  │ 4   ┆ 5.207  ┆ 4.2385 ┆ 3.0902 ┆ … ┆ 3.0792 ┆ 2.051  ┆ 2.0386 ┆ 6.6745 │
  │ 5   ┆ 6.1284 ┆ 3.3409 ┆ 4.2555 ┆ … ┆ 2.562  ┆ 3.2723 ┆ 3.2332 ┆ 5.1116 │
  │ 6   ┆ 6.1872 ┆ 5.0472 ┆ 4.4778 ┆ … ┆ 1.9276 ┆ 1.4186 ┆ 2.9721 ┆ 5.8159 │
  │ 7   ┆ 6.2093 ┆ 5.2261 ┆ 3.5937 ┆ … ┆ 0.0    ┆ 2.1873 ┆ 2.8699 ┆ 5.6941 │
  │ 8   ┆ 5.369  ┆ 4.8119 ┆ 3.3794 ┆ … ┆ 2.1873 ┆ 0.0    ┆ 3.574  ┆ 6.0967 │
  │ 9   ┆ 5.1897 ┆ 3.8339 ┆ 4.9679 ┆ … ┆ 2.8699 ┆ 3.574  ┆ 0.0    ┆ 4.9868 │
  │ 10  ┆ 5.5951 ┆ 3.631  ┆ 6.1982 ┆ … ┆ 5.6941 ┆ 6.0967 ┆ 4.9868 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 6.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 5.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 3.0 ┆ 3.0 │
  │ 3   ┆ 6.0 ┆ 5.0 ┆ 0.0 ┆ … ┆ 3.0 ┆ 3.0 ┆ 5.0 ┆ 6.0 │
  │ 4   ┆ 5.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 7.0 │
  │ 5   ┆ 6.0 ┆ 3.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 3.0 ┆ 5.0 │
  │ 6   ┆ 6.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 1.0 ┆ 3.0 ┆ 6.0 │
  │ 7   ┆ 6.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 5.0 │
  │ 8   ┆ 5.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 4.0 ┆ 6.0 │
  │ 9   ┆ 5.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 6.0 ┆ 3.0 ┆ 6.0 ┆ … ┆ 5.0 ┆ 6.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 4.8722 ┆ 7.5194 ┆ … ┆ 6.0761 ┆ 5.5891 ┆ 4.7143 ┆ 3.9755 │
  │ 2   ┆ 4.8722 ┆ 0.0    ┆ 5.8924 ┆ … ┆ 6.1195 ┆ 4.0595 ┆ 5.4143 ┆ 5.2144 │
  │ 3   ┆ 7.5194 ┆ 5.8924 ┆ 0.0    ┆ … ┆ 5.1998 ┆ 3.7008 ┆ 4.6127 ┆ 6.6143 │
  │ 4   ┆ 6.0351 ┆ 4.9201 ┆ 2.4277 ┆ … ┆ 3.3962 ┆ 1.1403 ┆ 2.193  ┆ 5.3723 │
  │ 5   ┆ 4.8614 ┆ 4.2806 ┆ 5.1202 ┆ … ┆ 2.6145 ┆ 3.5734 ┆ 2.9543 ┆ 5.3879 │
  │ 6   ┆ 5.4283 ┆ 5.236  ┆ 5.903  ┆ … ┆ 1.6382 ┆ 3.0931 ┆ 2.4998 ┆ 5.0794 │
  │ 7   ┆ 6.0761 ┆ 6.1195 ┆ 5.1998 ┆ … ┆ 0.0    ┆ 2.9367 ┆ 2.3493 ┆ 5.2506 │
  │ 8   ┆ 5.5891 ┆ 4.0595 ┆ 3.7008 ┆ … ┆ 2.9367 ┆ 0.0    ┆ 1.87   ┆ 6.2535 │
  │ 9   ┆ 4.7143 ┆ 5.4143 ┆ 4.6127 ┆ … ┆ 2.3493 ┆ 1.87   ┆ 0.0    ┆ 4.934  │
  │ 10  ┆ 3.9755 ┆ 5.2144 ┆ 6.6143 ┆ … ┆ 5.2506 ┆ 6.2535 ┆ 4.934  ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval-combinedentity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 6.297  ┆ 6.4283 ┆ … ┆ 6.2093 ┆ 5.369  ┆ 5.1897 ┆ 5.5951 │
  │ 2   ┆ 6.297  ┆ 0.0    ┆ 5.2759 ┆ … ┆ 5.2261 ┆ 4.8119 ┆ 3.8339 ┆ 3.631  │
  │ 3   ┆ 6.4283 ┆ 5.2759 ┆ 0.0    ┆ … ┆ 3.5937 ┆ 3.3794 ┆ 4.9679 ┆ 6.1982 │
  │ 4   ┆ 5.207  ┆ 4.2385 ┆ 3.0902 ┆ … ┆ 3.0792 ┆ 2.051  ┆ 2.0386 ┆ 6.6745 │
  │ 5   ┆ 6.1284 ┆ 3.3409 ┆ 4.2555 ┆ … ┆ 2.562  ┆ 3.2723 ┆ 3.2332 ┆ 5.1116 │
  │ 6   ┆ 6.1872 ┆ 5.0472 ┆ 4.4778 ┆ … ┆ 1.9276 ┆ 1.4186 ┆ 2.9721 ┆ 5.8159 │
  │ 7   ┆ 6.2093 ┆ 5.2261 ┆ 3.5937 ┆ … ┆ 0.0    ┆ 2.1873 ┆ 2.8699 ┆ 5.6941 │
  │ 8   ┆ 5.369  ┆ 4.8119 ┆ 3.3794 ┆ … ┆ 2.1873 ┆ 0.0    ┆ 3.574  ┆ 6.0967 │
  │ 9   ┆ 5.1897 ┆ 3.8339 ┆ 4.9679 ┆ … ┆ 2.8699 ┆ 3.574  ┆ 0.0    ┆ 4.9868 │
  │ 10  ┆ 5.5951 ┆ 3.631  ┆ 6.1982 ┆ … ┆ 5.6941 ┆ 6.0967 ┆ 4.9868 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 6.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 5.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 3.0 ┆ 3.0 │
  │ 3   ┆ 6.0 ┆ 5.0 ┆ 0.0 ┆ … ┆ 3.0 ┆ 3.0 ┆ 5.0 ┆ 6.0 │
  │ 4   ┆ 5.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 7.0 │
  │ 5   ┆ 6.0 ┆ 3.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 3.0 ┆ 5.0 │
  │ 6   ┆ 6.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 1.0 ┆ 3.0 ┆ 6.0 │
  │ 7   ┆ 6.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 5.0 │
  │ 8   ┆ 5.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 4.0 ┆ 6.0 │
  │ 9   ┆ 5.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 6.0 ┆ 3.0 ┆ 6.0 ┆ … ┆ 5.0 ┆ 6.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 4.8722 ┆ 7.5194 ┆ … ┆ 6.0761 ┆ 5.5891 ┆ 4.7143 ┆ 3.9755 │
  │ 2   ┆ 4.8722 ┆ 0.0    ┆ 5.8924 ┆ … ┆ 6.1195 ┆ 4.0595 ┆ 5.4143 ┆ 5.2144 │
  │ 3   ┆ 7.5194 ┆ 5.8924 ┆ 0.0    ┆ … ┆ 5.1998 ┆ 3.7008 ┆ 4.6127 ┆ 6.6143 │
  │ 4   ┆ 6.0351 ┆ 4.9201 ┆ 2.4277 ┆ … ┆ 3.3962 ┆ 1.1403 ┆ 2.193  ┆ 5.3723 │
  │ 5   ┆ 4.8614 ┆ 4.2806 ┆ 5.1202 ┆ … ┆ 2.6145 ┆ 3.5734 ┆ 2.9543 ┆ 5.3879 │
  │ 6   ┆ 5.4283 ┆ 5.236  ┆ 5.903  ┆ … ┆ 1.6382 ┆ 3.0931 ┆ 2.4998 ┆ 5.0794 │
  │ 7   ┆ 6.0761 ┆ 6.1195 ┆ 5.1998 ┆ … ┆ 0.0    ┆ 2.9367 ┆ 2.3493 ┆ 5.2506 │
  │ 8   ┆ 5.5891 ┆ 4.0595 ┆ 3.7008 ┆ … ┆ 2.9367 ┆ 0.0    ┆ 1.87   ┆ 6.2535 │
  │ 9   ┆ 4.7143 ┆ 5.4143 ┆ 4.6127 ┆ … ┆ 2.3493 ┆ 1.87   ┆ 0.0    ┆ 4.934  │
  │ 10  ┆ 3.9755 ┆ 5.2144 ┆ 6.6143 ┆ … ┆ 5.2506 ┆ 6.2535 ┆ 4.934  ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state-combinedentity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 6.297  ┆ 6.4283 ┆ … ┆ 6.2093 ┆ 5.369  ┆ 5.1897 ┆ 5.5951 │
  │ 2   ┆ 6.297  ┆ 0.0    ┆ 5.2759 ┆ … ┆ 5.2261 ┆ 4.8119 ┆ 3.8339 ┆ 3.631  │
  │ 3   ┆ 6.4283 ┆ 5.2759 ┆ 0.0    ┆ … ┆ 3.5937 ┆ 3.3794 ┆ 4.9679 ┆ 6.1982 │
  │ 4   ┆ 5.207  ┆ 4.2385 ┆ 3.0902 ┆ … ┆ 3.0792 ┆ 2.051  ┆ 2.0386 ┆ 6.6745 │
  │ 5   ┆ 6.1284 ┆ 3.3409 ┆ 4.2555 ┆ … ┆ 2.562  ┆ 3.2723 ┆ 3.2332 ┆ 5.1116 │
  │ 6   ┆ 6.1872 ┆ 5.0472 ┆ 4.4778 ┆ … ┆ 1.9276 ┆ 1.4186 ┆ 2.9721 ┆ 5.8159 │
  │ 7   ┆ 6.2093 ┆ 5.2261 ┆ 3.5937 ┆ … ┆ 0.0    ┆ 2.1873 ┆ 2.8699 ┆ 5.6941 │
  │ 8   ┆ 5.369  ┆ 4.8119 ┆ 3.3794 ┆ … ┆ 2.1873 ┆ 0.0    ┆ 3.574  ┆ 6.0967 │
  │ 9   ┆ 5.1897 ┆ 3.8339 ┆ 4.9679 ┆ … ┆ 2.8699 ┆ 3.574  ┆ 0.0    ┆ 4.9868 │
  │ 10  ┆ 5.5951 ┆ 3.631  ┆ 6.1982 ┆ … ┆ 5.6941 ┆ 6.0967 ┆ 4.9868 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 6.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 5.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 3.0 ┆ 3.0 │
  │ 3   ┆ 6.0 ┆ 5.0 ┆ 0.0 ┆ … ┆ 3.0 ┆ 3.0 ┆ 5.0 ┆ 6.0 │
  │ 4   ┆ 5.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 7.0 │
  │ 5   ┆ 6.0 ┆ 3.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 3.0 ┆ 5.0 │
  │ 6   ┆ 6.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 1.0 ┆ 3.0 ┆ 6.0 │
  │ 7   ┆ 6.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 5.0 │
  │ 8   ┆ 5.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 4.0 ┆ 6.0 │
  │ 9   ┆ 5.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 6.0 ┆ 3.0 ┆ 6.0 ┆ … ┆ 5.0 ┆ 6.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 4.8722 ┆ 7.5194 ┆ … ┆ 6.0761 ┆ 5.5891 ┆ 4.7143 ┆ 3.9755 │
  │ 2   ┆ 4.8722 ┆ 0.0    ┆ 5.8924 ┆ … ┆ 6.1195 ┆ 4.0595 ┆ 5.4143 ┆ 5.2144 │
  │ 3   ┆ 7.5194 ┆ 5.8924 ┆ 0.0    ┆ … ┆ 5.1998 ┆ 3.7008 ┆ 4.6127 ┆ 6.6143 │
  │ 4   ┆ 6.0351 ┆ 4.9201 ┆ 2.4277 ┆ … ┆ 3.3962 ┆ 1.1403 ┆ 2.193  ┆ 5.3723 │
  │ 5   ┆ 4.8614 ┆ 4.2806 ┆ 5.1202 ┆ … ┆ 2.6145 ┆ 3.5734 ┆ 2.9543 ┆ 5.3879 │
  │ 6   ┆ 5.4283 ┆ 5.236  ┆ 5.903  ┆ … ┆ 1.6382 ┆ 3.0931 ┆ 2.4998 ┆ 5.0794 │
  │ 7   ┆ 6.0761 ┆ 6.1195 ┆ 5.1998 ┆ … ┆ 0.0    ┆ 2.9367 ┆ 2.3493 ┆ 5.2506 │
  │ 8   ┆ 5.5891 ┆ 4.0595 ┆ 3.7008 ┆ … ┆ 2.9367 ┆ 0.0    ┆ 1.87   ┆ 6.2535 │
  │ 9   ┆ 4.7143 ┆ 5.4143 ┆ 4.6127 ┆ … ┆ 2.3493 ┆ 1.87   ┆ 0.0    ┆ 4.934  │
  │ 10  ┆ 3.9755 ┆ 5.2144 ┆ 6.6143 ┆ … ┆ 5.2506 ┆ 6.2535 ┆ 4.934  ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event-combinedentity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 5.9341 ┆ 6.2984 ┆ … ┆ 6.6726 ┆ 6.8466 ┆ 5.2679 ┆ 5.157  │
  │ 2   ┆ 5.9341 ┆ 0.0    ┆ 5.0606 ┆ … ┆ 3.9379 ┆ 4.2556 ┆ 3.2484 ┆ 4.3575 │
  │ 3   ┆ 6.2984 ┆ 5.0606 ┆ 0.0    ┆ … ┆ 4.7482 ┆ 5.32   ┆ 5.196  ┆ 5.3192 │
  │ 4   ┆ 6.4168 ┆ 4.6252 ┆ 2.9042 ┆ … ┆ 3.4631 ┆ 4.0466 ┆ 3.3106 ┆ 6.1899 │
  │ 5   ┆ 5.2761 ┆ 4.6449 ┆ 4.5368 ┆ … ┆ 4.0205 ┆ 3.1232 ┆ 3.0976 ┆ 4.4221 │
  │ 6   ┆ 5.628  ┆ 5.0325 ┆ 4.9048 ┆ … ┆ 3.2519 ┆ 2.125  ┆ 2.9185 ┆ 4.8211 │
  │ 7   ┆ 6.6726 ┆ 3.9379 ┆ 4.7482 ┆ … ┆ 0.0    ┆ 1.5255 ┆ 2.2614 ┆ 6.0491 │
  │ 8   ┆ 6.8466 ┆ 4.2556 ┆ 5.32   ┆ … ┆ 1.5255 ┆ 0.0    ┆ 3.0464 ┆ 5.1018 │
  │ 9   ┆ 5.2679 ┆ 3.2484 ┆ 5.196  ┆ … ┆ 2.2614 ┆ 3.0464 ┆ 0.0    ┆ 5.3178 │
  │ 10  ┆ 5.157  ┆ 4.3575 ┆ 5.3192 ┆ … ┆ 6.0491 ┆ 5.1018 ┆ 5.3178 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 7.0 ┆ 7.0 ┆ 5.0 ┆ 5.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 3.0 ┆ 5.0 │
  │ 3   ┆ 6.0 ┆ 4.0 ┆ 0.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 5.0 ┆ 4.0 │
  │ 4   ┆ 6.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 4.0 ┆ 4.0 ┆ 3.0 ┆ 6.0 │
  │ 5   ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 4.0 ┆ 3.0 ┆ 3.0 ┆ 4.0 │
  │ 6   ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 3.0 ┆ 5.0 │
  │ 7   ┆ 7.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 0.0 ┆ 1.0 ┆ 2.0 ┆ 6.0 │
  │ 8   ┆ 7.0 ┆ 4.0 ┆ 5.0 ┆ … ┆ 1.0 ┆ 0.0 ┆ 3.0 ┆ 5.0 │
  │ 9   ┆ 5.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 5.0395 ┆ 5.3742 ┆ … ┆ 5.3628 ┆ 6.2329 ┆ 6.0938 ┆ 5.7848 │
  │ 2   ┆ 5.0395 ┆ 0.0    ┆ 7.2855 ┆ … ┆ 5.1627 ┆ 4.6608 ┆ 4.1814 ┆ 1.7873 │
  │ 3   ┆ 5.3742 ┆ 7.2855 ┆ 0.0    ┆ … ┆ 3.0264 ┆ 6.2917 ┆ 5.3014 ┆ 8.711  │
  │ 4   ┆ 5.6323 ┆ 5.7277 ┆ 2.1665 ┆ … ┆ 1.3156 ┆ 4.2331 ┆ 3.8512 ┆ 6.7164 │
  │ 5   ┆ 5.5878 ┆ 3.2243 ┆ 6.4418 ┆ … ┆ 4.0977 ┆ 3.6161 ┆ 3.1536 ┆ 4.1247 │
  │ 6   ┆ 5.5259 ┆ 3.1712 ┆ 5.1463 ┆ … ┆ 4.1196 ┆ 2.625  ┆ 2.5926 ┆ 4.0223 │
  │ 7   ┆ 5.3628 ┆ 5.1627 ┆ 3.0264 ┆ … ┆ 0.0    ┆ 3.6277 ┆ 2.5327 ┆ 6.2454 │
  │ 8   ┆ 6.2329 ┆ 4.6608 ┆ 6.2917 ┆ … ┆ 3.6277 ┆ 0.0    ┆ 3.232  ┆ 5.5089 │
  │ 9   ┆ 6.0938 ┆ 4.1814 ┆ 5.3014 ┆ … ┆ 2.5327 ┆ 3.232  ┆ 0.0    ┆ 5.0745 │
  │ 10  ┆ 5.7848 ┆ 1.7873 ┆ 8.711  ┆ … ┆ 6.2454 ┆ 5.5089 ┆ 5.0745 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval-combinedentity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 5.9341 ┆ 6.2984 ┆ … ┆ 6.6726 ┆ 6.8466 ┆ 5.2679 ┆ 5.157  │
  │ 2   ┆ 5.9341 ┆ 0.0    ┆ 5.0606 ┆ … ┆ 3.9379 ┆ 4.2556 ┆ 3.2484 ┆ 4.3575 │
  │ 3   ┆ 6.2984 ┆ 5.0606 ┆ 0.0    ┆ … ┆ 4.7482 ┆ 5.32   ┆ 5.196  ┆ 5.3192 │
  │ 4   ┆ 6.4168 ┆ 4.6252 ┆ 2.9042 ┆ … ┆ 3.4631 ┆ 4.0466 ┆ 3.3106 ┆ 6.1899 │
  │ 5   ┆ 5.2761 ┆ 4.6449 ┆ 4.5368 ┆ … ┆ 4.0205 ┆ 3.1232 ┆ 3.0976 ┆ 4.4221 │
  │ 6   ┆ 5.628  ┆ 5.0325 ┆ 4.9048 ┆ … ┆ 3.2519 ┆ 2.125  ┆ 2.9185 ┆ 4.8211 │
  │ 7   ┆ 6.6726 ┆ 3.9379 ┆ 4.7482 ┆ … ┆ 0.0    ┆ 1.5255 ┆ 2.2614 ┆ 6.0491 │
  │ 8   ┆ 6.8466 ┆ 4.2556 ┆ 5.32   ┆ … ┆ 1.5255 ┆ 0.0    ┆ 3.0464 ┆ 5.1018 │
  │ 9   ┆ 5.2679 ┆ 3.2484 ┆ 5.196  ┆ … ┆ 2.2614 ┆ 3.0464 ┆ 0.0    ┆ 5.3178 │
  │ 10  ┆ 5.157  ┆ 4.3575 ┆ 5.3192 ┆ … ┆ 6.0491 ┆ 5.1018 ┆ 5.3178 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 7.0 ┆ 7.0 ┆ 5.0 ┆ 5.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 3.0 ┆ 5.0 │
  │ 3   ┆ 6.0 ┆ 4.0 ┆ 0.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 5.0 ┆ 4.0 │
  │ 4   ┆ 6.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 4.0 ┆ 4.0 ┆ 3.0 ┆ 6.0 │
  │ 5   ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 4.0 ┆ 3.0 ┆ 3.0 ┆ 4.0 │
  │ 6   ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 3.0 ┆ 5.0 │
  │ 7   ┆ 7.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 0.0 ┆ 1.0 ┆ 2.0 ┆ 6.0 │
  │ 8   ┆ 7.0 ┆ 4.0 ┆ 5.0 ┆ … ┆ 1.0 ┆ 0.0 ┆ 3.0 ┆ 5.0 │
  │ 9   ┆ 5.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 5.0395 ┆ 5.3742 ┆ … ┆ 5.3628 ┆ 6.2329 ┆ 6.0938 ┆ 5.7848 │
  │ 2   ┆ 5.0395 ┆ 0.0    ┆ 7.2855 ┆ … ┆ 5.1627 ┆ 4.6608 ┆ 4.1814 ┆ 1.7873 │
  │ 3   ┆ 5.3742 ┆ 7.2855 ┆ 0.0    ┆ … ┆ 3.0264 ┆ 6.2917 ┆ 5.3014 ┆ 8.711  │
  │ 4   ┆ 5.6323 ┆ 5.7277 ┆ 2.1665 ┆ … ┆ 1.3156 ┆ 4.2331 ┆ 3.8512 ┆ 6.7164 │
  │ 5   ┆ 5.5878 ┆ 3.2243 ┆ 6.4418 ┆ … ┆ 4.0977 ┆ 3.6161 ┆ 3.1536 ┆ 4.1247 │
  │ 6   ┆ 5.5259 ┆ 3.1712 ┆ 5.1463 ┆ … ┆ 4.1196 ┆ 2.625  ┆ 2.5926 ┆ 4.0223 │
  │ 7   ┆ 5.3628 ┆ 5.1627 ┆ 3.0264 ┆ … ┆ 0.0    ┆ 3.6277 ┆ 2.5327 ┆ 6.2454 │
  │ 8   ┆ 6.2329 ┆ 4.6608 ┆ 6.2917 ┆ … ┆ 3.6277 ┆ 0.0    ┆ 3.232  ┆ 5.5089 │
  │ 9   ┆ 6.0938 ┆ 4.1814 ┆ 5.3014 ┆ … ┆ 2.5327 ┆ 3.232  ┆ 0.0    ┆ 5.0745 │
  │ 10  ┆ 5.7848 ┆ 1.7873 ┆ 8.711  ┆ … ┆ 6.2454 ┆ 5.5089 ┆ 5.0745 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state-combinedentity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 5.9341 ┆ 6.2984 ┆ … ┆ 6.6726 ┆ 6.8466 ┆ 5.2679 ┆ 5.157  │
  │ 2   ┆ 5.9341 ┆ 0.0    ┆ 5.0606 ┆ … ┆ 3.9379 ┆ 4.2556 ┆ 3.2484 ┆ 4.3575 │
  │ 3   ┆ 6.2984 ┆ 5.0606 ┆ 0.0    ┆ … ┆ 4.7482 ┆ 5.32   ┆ 5.196  ┆ 5.3192 │
  │ 4   ┆ 6.4168 ┆ 4.6252 ┆ 2.9042 ┆ … ┆ 3.4631 ┆ 4.0466 ┆ 3.3106 ┆ 6.1899 │
  │ 5   ┆ 5.2761 ┆ 4.6449 ┆ 4.5368 ┆ … ┆ 4.0205 ┆ 3.1232 ┆ 3.0976 ┆ 4.4221 │
  │ 6   ┆ 5.628  ┆ 5.0325 ┆ 4.9048 ┆ … ┆ 3.2519 ┆ 2.125  ┆ 2.9185 ┆ 4.8211 │
  │ 7   ┆ 6.6726 ┆ 3.9379 ┆ 4.7482 ┆ … ┆ 0.0    ┆ 1.5255 ┆ 2.2614 ┆ 6.0491 │
  │ 8   ┆ 6.8466 ┆ 4.2556 ┆ 5.32   ┆ … ┆ 1.5255 ┆ 0.0    ┆ 3.0464 ┆ 5.1018 │
  │ 9   ┆ 5.2679 ┆ 3.2484 ┆ 5.196  ┆ … ┆ 2.2614 ┆ 3.0464 ┆ 0.0    ┆ 5.3178 │
  │ 10  ┆ 5.157  ┆ 4.3575 ┆ 5.3192 ┆ … ┆ 6.0491 ┆ 5.1018 ┆ 5.3178 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 7.0 ┆ 7.0 ┆ 5.0 ┆ 5.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 3.0 ┆ 5.0 │
  │ 3   ┆ 6.0 ┆ 4.0 ┆ 0.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 5.0 ┆ 4.0 │
  │ 4   ┆ 6.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 4.0 ┆ 4.0 ┆ 3.0 ┆ 6.0 │
  │ 5   ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 4.0 ┆ 3.0 ┆ 3.0 ┆ 4.0 │
  │ 6   ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 3.0 ┆ 5.0 │
  │ 7   ┆ 7.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 0.0 ┆ 1.0 ┆ 2.0 ┆ 6.0 │
  │ 8   ┆ 7.0 ┆ 4.0 ┆ 5.0 ┆ … ┆ 1.0 ┆ 0.0 ┆ 3.0 ┆ 5.0 │
  │ 9   ┆ 5.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 5.0395 ┆ 5.3742 ┆ … ┆ 5.3628 ┆ 6.2329 ┆ 6.0938 ┆ 5.7848 │
  │ 2   ┆ 5.0395 ┆ 0.0    ┆ 7.2855 ┆ … ┆ 5.1627 ┆ 4.6608 ┆ 4.1814 ┆ 1.7873 │
  │ 3   ┆ 5.3742 ┆ 7.2855 ┆ 0.0    ┆ … ┆ 3.0264 ┆ 6.2917 ┆ 5.3014 ┆ 8.711  │
  │ 4   ┆ 5.6323 ┆ 5.7277 ┆ 2.1665 ┆ … ┆ 1.3156 ┆ 4.2331 ┆ 3.8512 ┆ 6.7164 │
  │ 5   ┆ 5.5878 ┆ 3.2243 ┆ 6.4418 ┆ … ┆ 4.0977 ┆ 3.6161 ┆ 3.1536 ┆ 4.1247 │
  │ 6   ┆ 5.5259 ┆ 3.1712 ┆ 5.1463 ┆ … ┆ 4.1196 ┆ 2.625  ┆ 2.5926 ┆ 4.0223 │
  │ 7   ┆ 5.3628 ┆ 5.1627 ┆ 3.0264 ┆ … ┆ 0.0    ┆ 3.6277 ┆ 2.5327 ┆ 6.2454 │
  │ 8   ┆ 6.2329 ┆ 4.6608 ┆ 6.2917 ┆ … ┆ 3.6277 ┆ 0.0    ┆ 3.232  ┆ 5.5089 │
  │ 9   ┆ 6.0938 ┆ 4.1814 ┆ 5.3014 ┆ … ┆ 2.5327 ┆ 3.232  ┆ 0.0    ┆ 5.0745 │
  │ 10  ┆ 5.7848 ┆ 1.7873 ┆ 8.711  ┆ … ┆ 6.2454 ┆ 5.5089 ┆ 5.0745 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event-combinedentity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0    ┆ 1.4253 │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 1.4253 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0    ┆ 3.0119 │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 3.0119 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval-combinedentity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0    ┆ 1.4253 │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 1.4253 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0    ┆ 3.0119 │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 3.0119 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state-combinedentity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0    ┆ 1.4253 │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 1.4253 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0    ┆ 3.0    │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0    ┆ 3.0119 │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 3.0119 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event-combinedentity]
  6.297
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event-hamming]
  6.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event-l2entity]
  4.8722
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval-combinedentity]
  6.297
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval-hamming]
  6.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval-l2entity]
  4.8722
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state-combinedentity]
  6.297
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state-hamming]
  6.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state-l2entity]
  4.8722
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event-combinedentity]
  5.9341
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event-hamming]
  6.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event-l2entity]
  5.0395
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval-combinedentity]
  5.9341
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval-hamming]
  6.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval-l2entity]
  5.0395
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state-combinedentity]
  5.9341
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state-hamming]
  6.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state-l2entity]
  5.0395
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event-combinedentity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval-combinedentity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state-combinedentity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event-combinedentity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval-combinedentity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state-combinedentity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state-l2entity]
  0.0
# ---
